--- a/src/App.css
+++ b/src/App.css
@@ -39,3 +39,38 @@ h1{
   
   
 }
+
+/* 1.2 Event section */
+.EventsectionHeader{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.EventSearch{
+  margin-left:3vw;
+  margin-right:2vw;
+  border-radius: 4px;
+  border: 1px solid black;
+}
+
+.EventSection{
+  text-align: center;
+  
+  margin:2vw;
+  overflow: scroll;
+  background-color:rgb(255, 255, 255) ;
+}
+h1{
+  margin-top:1vh;
+  text-align: center;
+}
+
+.Eventlistitem{
+  display: flex;
+  flex-direction:row;
+}
+.Eventlistitem li{
+  margin-right:1vw;
+  
+  
+}
