--- a/src/App.css
+++ b/src/App.css
@@ -45,11 +45,13 @@ h1{
 /* 1.2 Event section */
 .EventsectionHeader{
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
+
 }
 .EventSearch{
-  margin-left:3vw;
+  margin-left:6vw;
   margin-right:2vw;
   border-radius: 4px;
   border: 1px solid black;
